@@ -6,9 +6,9 @@ dependencies[] = og_views
 package = Organic groups
 core = 6.x
 
-; Information added by drupal.org packaging script on 2009-06-16
-version = "6.x-4.0"
+; Information added by drupal.org packaging script on 2009-08-18
+version = "6.x-4.x-dev"
 core = "6.x"
 project = "og_user_roles"
-datestamp = "1245190245"
+datestamp = "1250619866"
 
