@@ -1,5 +1,5 @@
 <?php
-// $Id: og_user_roles.module,v 1.36 2009/06/08 12:57:47 sun Exp $
+// $Id: og_user_roles.module,v 1.42 2009/08/14 15:55:38 sun Exp $
 
 /**
  * @file
@@ -30,6 +30,7 @@ function og_user_roles_help($path, $arg) {
 function og_user_roles_perm() {
   return array(
     'configure member roles',
+    'override group default role',
   );
 }
 
@@ -66,7 +67,7 @@ function og_user_roles_is_allowed($node) {
     return FALSE;
   }
   // Only allow access to member role configuration if there are roles to assign.
-  $roles = array_filter(variable_get("og_user_roles_roles_{$node->type}", NULL));
+  $roles = array_filter(variable_get("og_user_roles_roles_{$node->type}", array()));
   if (og_is_group_type($node->type) && !empty($roles)) {
     return TRUE;
   }
@@ -179,7 +180,7 @@ function og_user_roles_determine_context() {
  *
  * In Drupal 7, this fork can probably be replaced with
  * @code
- * drupal_static_reset('menu_get_item');
+ *   drupal_static_reset('menu_get_item');
  * @endcode
  *
  * @see menu_get_item()
@@ -198,7 +199,8 @@ function og_user_roles_menu_get_item($path = NULL, $router_item = NULL) {
     list($ancestors, $placeholders) = menu_get_ancestors($parts);
 
     if ($router_item = db_fetch_array(db_query_range('SELECT * FROM {menu_router} WHERE path IN ('. implode (',', $placeholders) .') ORDER BY fit DESC', $ancestors, 0, 1))) {
-      $map = _menu_translate($router_item, $original_map);
+      // OGUR: Allow privilege escalation; do not invoke access callbacks.
+      $map = og_user_roles_menu_translate($router_item, $original_map);
       if ($map === FALSE) {
         $router_items[$path] = FALSE;
         return FALSE;
@@ -212,6 +214,64 @@ function og_user_roles_menu_get_item($path = NULL, $router_item = NULL) {
     $router_items[$path] = $router_item;
   }
   return $router_items[$path];
+}
+
+/**
+ * Handles dynamic path translation and menu access control.
+ *
+ * Certain menu access callbacks (like _node_revision_access()) statically cache
+ * the result of the access check for performance. We only want to retrieve and
+ * determine the group context in og_user_roles_init(), resp.
+ * og_user_roles_menu_get_item(), where no additional roles have been granted
+ * yet. _menu_translate() would normally also invoke the access callback for the
+ * current page. Therefore, certain menu access callbacks, which statically
+ * cache their result, would return that result in subsequent invocations (i.e.
+ * FALSE when the user does not have permissions).
+ *
+ * Since OG user roles only wants to retrieve context and all of the regular
+ * menu system's behavior is and should not be modified, we simply skip the
+ * access check in this fork.
+ *
+ * In Drupal 7, this wrapper can probably be replaced with (or similar):
+ * @code
+ *   drupal_static_reset('_node_revision_access');
+ * @endcode
+ *
+ * @see _menu_translate()
+ * @see og_user_roles_menu_get_item()
+ */
+function og_user_roles_menu_translate(&$router_item, $map, $to_arg = FALSE) {
+  if ($to_arg) {
+    // Fill in missing path elements, such as the current uid.
+    _menu_link_map_translate($map, $router_item['to_arg_functions']);
+  }
+  // The $path_map saves the pieces of the path as strings, while elements in
+  // $map may be replaced with loaded objects.
+  $path_map = $map;
+  if (!_menu_load_objects($router_item, $map)) {
+    // An error occurred loading an object.
+    $router_item['access'] = FALSE;
+    return FALSE;
+  }
+
+  // Generate the link path for the page request or local tasks.
+  $link_map = explode('/', $router_item['path']);
+  for ($i = 0; $i < $router_item['number_parts']; $i++) {
+    if ($link_map[$i] == '%') {
+      $link_map[$i] = $path_map[$i];
+    }
+  }
+  $router_item['href'] = implode('/', $link_map);
+  $router_item['options'] = array();
+  // OGUR: Allow privilege escalation; do not invoke access callbacks.
+  //_menu_check_access($router_item, $map);
+  
+  // For performance, don't localize an item the user can't access.
+  if (!empty($router_item['access'])) {
+    _menu_item_localize($router_item, $map);
+  }
+
+  return $map;
 }
 
 /**
@@ -319,7 +379,7 @@ function og_user_roles_og($op, $nid, $uid, $args = array()) {
   switch ($op) {
     case 'user insert':
       // Add default role for new group members, if configured.
-      if ($default_role = variable_get('og_user_roles_default_role', 0)) {
+      if ($default_role = og_user_roles_get_group_default_role($nid)) {
         og_user_roles_role_add($nid, $uid, $default_role);
       }
 
@@ -333,7 +393,7 @@ function og_user_roles_og($op, $nid, $uid, $args = array()) {
 
     case 'user update':
       $default_admin_role = variable_get('og_user_roles_default_admin_role', 0);
-      $default_role = variable_get('og_user_roles_default_role', 0);
+      $default_role = og_user_roles_get_group_default_role($nid);
       if ($default_admin_role > 0 && $default_admin_role != $default_role) {
         // Grant role for new group admin.
         if (isset($args['is_admin']) && $args['is_admin']) {
@@ -341,7 +401,7 @@ function og_user_roles_og($op, $nid, $uid, $args = array()) {
         }
         // Delete role for obsolete group admin.
         else {
-          og_user_roles_role_delete($nid, $uid, $rid);
+          og_user_roles_role_delete($nid, $uid, $default_admin_role);
         }
       }
       break;
@@ -358,10 +418,35 @@ function og_user_roles_og($op, $nid, $uid, $args = array()) {
  */
 function og_user_roles_nodeapi(&$node, $op, $teaser = NULL, $page = NULL) {
   switch ($op) {
+    case 'load':
+      if (og_is_group_type($node->type)) {
+        $rid = db_result(db_query("SELECT default_role FROM {og_users_roles_group} WHERE gid = %d", $node->nid));
+        if ($rid) {
+          $node->og_user_roles_default_role = $rid;
+        }
+      }
+      break;
+
+    case 'insert':
+      if (!empty($node->og_user_roles_default_role) && og_is_group_type($node->type)) {
+        db_query("INSERT INTO {og_users_roles_group} (gid, default_role) VALUES (%d, %d)", $node->nid, $node->og_user_roles_default_role);
+      }
+      break;
+
+    case 'update':
+      if (!empty($node->og_user_roles_default_role) && og_is_group_type($node->type)) {
+        db_query("UPDATE {og_users_roles_group} SET default_role = %d WHERE gid = %d", $node->og_user_roles_default_role, $node->nid);
+        if (!db_affected_rows()) {
+          db_query("INSERT INTO {og_users_roles_group} (gid, default_role) VALUES (%d, %d)", $node->nid, $node->og_user_roles_default_role);
+        }
+      }
+      break;
+
     case 'delete':
       // Remove all data for a deleted group.
       if (og_is_group_type($node->type)) {
         db_query("DELETE FROM {og_users_roles} WHERE gid = %d", $node->nid);
+        db_query("DELETE FROM {og_users_roles_group} WHERE gid = %d", $node->nid);
       }
       break;
   }
@@ -380,6 +465,9 @@ function og_user_roles_form_user_admin_role_alter(&$form, $form_state) {
 function og_user_roles_user_admin_role_delete_submit($form, &$form_state) {
   // Remove all role assignments for deleted user role.
   db_query('DELETE FROM {og_users_roles} WHERE rid = %d', $form_state['values']['rid']);
+  db_query("DELETE FROM {og_users_roles_group} WHERE default_role = %d", $form_state['values']['rid']);
+  // Invoke default submit handler (not converted to button submit handler yet).
+  user_admin_role_submit($form, $form_state);
 }
 
 /**
@@ -426,7 +514,7 @@ function og_user_roles_role_add($gid, $uid, $rid) {
 }
 
 /**
- * Grant a role or all roles for a user in a group.
+ * Revoke a role or all roles for a user in a group.
  *
  * @param $gid
  *   The group ID.
@@ -444,3 +532,64 @@ function og_user_roles_role_delete($gid, $uid, $rid = NULL) {
   }
 }
 
+/**
+ * Retrieve all roles assignable in a group.
+ */
+function og_user_roles_get_group_roles($node_type) {
+  $roles = array();
+  $allowed_roles = array_filter(variable_get("og_user_roles_roles_{$node_type}", array()));
+  $user_roles = user_roles();
+  foreach ($allowed_roles as $rid => $checked) {
+    $roles[$rid] = $user_roles[$rid];
+  }
+  return $roles;
+}
+
+/**
+ * Implementation of hook_form_alter().
+ */
+function og_user_roles_form_alter(&$form, &$form_state, $form_id) {
+  // Add default user role option to node form.
+  // @todo Consider a better UI location for this.
+  if (isset($form['#node']) && $form_id == $form['#node']->type . '_node_form') {
+    $node = $form['#node'];
+    if (og_is_group_type($node->type) && user_access('override group default role')) {
+      $default = (!empty($node->og_user_roles_default_role) ? $node->og_user_roles_default_role : 0);
+      $options = array(0 => t('<default>'));
+      $options += og_user_roles_get_group_roles($node->type);
+
+      $form['og_user_roles_default_role'] = array(
+        '#type' => 'select',
+        '#title' => t('Default role for new members'),
+        '#options' => $options,
+        '#default_value' => $default,
+        '#description' => t('Configure a default role to be assigned to new group members.'),
+      );
+    }
+  }
+}
+
+/**
+ * Implementation of hook_content_extra_fields().
+ */
+function og_user_roles_content_extra_fields($type_name) {
+  if (og_is_group_type($type_name)) {
+    $extra['og_user_roles_default_role'] = array(
+      'label' => t('Default role for new members'),
+      'description' => t('Configure a default role to be assigned to new group members.'),
+      'weight' => 0,
+    );
+    return $extra;
+  }
+}
+
+/**
+ * Return default role for a group.
+ */
+function og_user_roles_get_group_default_role($nid) {
+  $default_role = db_result(db_query("SELECT default_role FROM {og_users_roles_group} WHERE gid = %d", $nid));
+  if (!$default_role) {
+    $default_role = variable_get('og_user_roles_default_role', 0);
+  }
+  return $default_role;
+}
